# zephyr

./: .gitignore  Dockerfile  README.md  config.yaml  embedder.py  model_cache.py  pyproject.toml  quantizer.py  server.py  test_server.py
.github/: dependabot.yml
benchmarks/: benchmark.py  benchmark_gpu.py
config/: config.yaml  loader.py
embeddings/: embedder.py  model_cache.py
scripts/: verify_no_torch.py
server/: logging_config.py  main.py  middleware.py  schemas.py
tests/: test_server.py
