[project]
name = "zephyr"
version = "0.1.0"
description = "Pure ONNX Embedding Server with zero PyTorch dependency"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "onnxruntime", 
    "tokenizers",
    "huggingface-hub",
    "numpy",
    "omegaconf",
    "onnx",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
